--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@
 }
 
 .footer {
-	background-color: #D1C4E9;
+	background-color: #2966c7;
 	margin: 0px auto;
 	padding: 20px 0px 0px 0px;
 }
@@ -20,7 +20,7 @@
 .jumbotron {
 	padding: 70px 30px 70px 30px;
 	margin: 0px auto;
-	background: #9575CD;
+	background: #2966c7;
 	color: floralwhite;
 }
 
@@ -36,7 +36,7 @@ body{
 }
 
 .navbar-dark {
-     background-color: #512DA8;
+     background-color: #4e08f2;
 }
 
 .google-map {
@@ -45,18 +45,29 @@ body{
 	overflow: hidden;		
 }
 
-@media only screen and (max-width: 600px) {
-	.title{
-		width: 50%;
-	}
-
-	.hot{
-		display: block;
-		width: 62px;
-		padding: 4px 4px;
-	}
-
-	.weeken{
-		width:95%;
-	}
+.tab-content {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
 }
+
+.carousel {
+    background:#512DA8;
+}
+ 
+.carousel-item {
+  height: 300px;
+}
+ 
+.carousel-item img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 300px;
+}
+
+.list-unstyled a{
+	color: rgb(218, 210, 210)
+}
+
