--- a/css/styles.css
+++ b/css/styles.css
@@ -1,73 +1,64 @@
-
 .row-header {
-	margin: 0px auto;
-	padding: 0px;
-}
+  margin: 0px auto;
+  padding: 0px 0px; }
 
 .row-content {
-	margin: 0 auto;
-	padding: 50px 0px 50px 0px;
-	border-bottom: 1px ridge;
-	min-height: 400px;
-}
+  margin: 0px auto;
+  padding: 50px 0px;
+  border-bottom: 1px ridge;
+  min-height: 400px; }
 
 .footer {
-	background-color: #2966c7;
-	margin: 0px auto;
-	padding: 20px 0px 0px 0px;
-}
+  background-color: #67b76c;
+  margin: 0px auto;
+  padding: 20px 0px; }
 
 .jumbotron {
-	padding: 70px 30px 70px 30px;
-	margin: 0px auto;
-	background: #2966c7;
-	color: floralwhite;
-}
+  margin: 0px auto;
+  padding: 70px 30px;
+  background: #168818;
+  color: floralwhite; }
 
 address {
-	font-size: 90%;
-	margin: 0px;
-	color: #0f0f0f;
-}
+  font-size: 80%;
+  margin: 0px;
+  color: #0f0f0f; }
 
-body{
-    padding:50px 0px 0px 0px;
-    z-index:0;
-}
+body {
+  padding: 50px 0px 0px 0px;
+  z-index: 0; }
 
 .navbar-dark {
-     background-color: #4e08f2;
-}
-
-.google-map {
-	padding: 10px 0px;
-	border-radius: 100%;
-	overflow: hidden;		
-}
+  background-color: #44d168; }
 
 .tab-content {
-    border-left: 1px solid #ddd;
-    border-right: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
-    padding: 10px;
-}
+  border-left: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  padding: 10px; }
 
 .carousel {
-    background:#512DA8;
-}
- 
-.carousel-item {
-  height: 300px;
-}
- 
-.carousel-item img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    min-height: 300px;
-}
+  background: #44d168; }
+  .carousel .carousel-item {
+    height: 300px; }
+    .carousel .carousel-item img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      min-height: 300px; }
 
-.list-unstyled a{
-	color: rgb(218, 210, 210)
-}
+#carouselButtonGroup {
+  right: 0px;
+  position: absolute;
+  bottom: 0px;
+  z-index: 1; }
 
+.modal-header {
+  color: floralwhite;
+  background-color: #44d168; }
+
+.modal-body {
+  background-color: #168818; }
+
+.close {
+  color: floralwhite; }
